// Copyright 2025 Gravitational, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package teleport.cloudcluster.v1;

import "teleport/header/v1/metadata.proto";

option go_package = "github.com/gravitational/teleport/api/gen/proto/go/teleport/cloudcluster/v1;cloudcluster";

// CloudCluster represents a subtenant for Cloud Tenants
message CloudCluster {
  string kind = 1;
  string sub_kind = 2;
  string version = 3;
  teleport.header.v1.Metadata metadata = 4;

  CloudClusterSpec spec = 5;
  CloudClusterStatus status = 6;
}

// CloudClusterSpec configures where a CloudCluster should be created and the initial bot
message CloudClusterSpec {
  string auth_region = 1;
  string bot_name = 2;
  string join_method = 3;
  repeated IAMAllow allow = 4;
}

// CloudClusterStatus is populated with status from Teleport Cloud
message CloudClusterStatus {
  string status = 1;
}

// IAMAllow configures an IAM join token
message IAMAllow {
  string aws_account = 1;
  string aws_arn = 2;
}
